tests/samples/negative/modules/unknown_qualified_function.ax
module unknown_qualified_function;

import samplelib.visibility as vis;

fn main() -> i32 {
    return vis::missing();
}
